--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html", 
+    "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url https://github.com/SaulHdez93/LOLcampeones/",
     "deploy": "gh-pages -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,8 @@
   "description": "",
   "dependencies": {
     "parcel-bundler": "^1.12.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
